fix crud product